--- a/style.css
+++ b/style.css
@@ -106,3 +106,55 @@ header {
   border: 1px solid #fd6e0a;
   padding: 18px 35px;
 }
+
+/* ABOUT SECTION */
+
+.primary-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.about-section {
+  max-width: 1140px;
+  margin: 150px auto;
+  border-radius: 10px;
+  background: #fff8f3;
+  padding: 130px 200px;
+}
+
+.about-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  padding: 30px 0;
+}
+
+.about-info-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.about-info-container {
+  text-align: center;
+}
+
+.about-info-title {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.about-info {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+/* WHAT I DO SECTION */
