--- a/style.css
+++ b/style.css
@@ -117,14 +117,14 @@ header {
 }
 
 .about-section {
-  max-width: 1140px;
+  width: 1140px;
   margin: 150px auto;
   border-radius: 10px;
   background: #fff8f3;
   padding: 130px 200px;
 }
 
-.about-description {
+.primary-description {
   color: #757575;
   text-align: center;
   font-size: 18px;
@@ -158,3 +158,34 @@ header {
 }
 
 /* WHAT I DO SECTION */
+
+.what-section {
+  width: 1140px;
+  margin: 150px auto;
+}
+
+.what-subsection {
+  display: flex;
+  gap: 10px;
+}
+
+.what-subsection-container {
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+
+.what-subsection-container h2 {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 0;
+}
+
+.what-subsection-container p {
+  color: #757575;
+  line-height: 28px;
+  font-size: 16px;
+  font-weight: 400;
+}
